--- a/src/app/carrier-objective/carrier-objective.component.html
+++ b/src/app/carrier-objective/carrier-objective.component.html
@@ -28,34 +28,34 @@
          <fieldset class="form-group">
             <label>Carrier Objective</label>
 
-            <textarea [(ngModel)]="userDetail.carrierobjective" name="userCarrierObj" 
+            <textarea [(ngModel)]="userDetail.carrierobjective" name="carrierobjective" 
             #userName="ngModel" class="form-control" required="required" minlength="5"></textarea>
            <!-- <input type="textarea" [(ngModel)]="userDetail.carrierobjective" name="userCarrierObj" 
             #userName="ngModel" class="form-control" required="required" minlength="5">-->
         </fieldset>
         <fieldset class="form-group">
             <label>Technical Skill Set</label>
-            <input type="text" [(ngModel)]="userDetail.userName" name="userName" 
+            <input type="text" [(ngModel)]="userDetail.technicalSkil" name="technicalSkil" 
             #userName="ngModel" class="form-control" required="required" minlength="5">
         </fieldset>
         <fieldset class="form-group">
             <label>Education Detail</label>
-            <input type="text" [(ngModel)]="userDetail.userName" name="userName" 
+            <input type="text" [(ngModel)]="userDetail.educationDetails" name="educationDetails" 
             #userName="ngModel" class="form-control" required="required" minlength="5">
         </fieldset>
         <fieldset class="form-group">
             <label>Experience Detail</label>
-            <input type="text" [(ngModel)]="userDetail.userName" name="userName" 
+            <input type="text" [(ngModel)]="userDetail.experiencedDetails" name="experiencedDetails" 
             #userName="ngModel" class="form-control" required="required" minlength="5">
         </fieldset>
         <fieldset class="form-group">
             <label>Project Detail</label>
-            <input type="text" [(ngModel)]="userDetail.userName" name="userName" 
+            <input type="text" [(ngModel)]="userDetail.projectDetails" name="projectDetails" 
             #userName="ngModel" class="form-control" required="required" minlength="5">
         </fieldset>
         <fieldset class="form-group">
             <label>Personal Detail</label>
-            <input type="text" [(ngModel)]="userDetail.userName" name="userName" 
+            <input type="text" [(ngModel)]="userDetail.personalDetails" name="personalDetails" 
             #userName="ngModel" class="form-control" required="required" minlength="5">
         </fieldset> 
         <fieldset class="form-group">
